🐛 Fix lesson page
- Taller notes field
- Related lessons carousel now follows the carousels pattern on home page
- Fix curriculum section not showing up when using mobile emulation on desktop

--- a/src/scss/pages/lesson.scss
+++ b/src/scss/pages/lesson.scss
@@ -149,7 +149,7 @@
     }
 
     .notes-input {
-      > input[type="text"] {
+      > textarea {
         background-color: rgba(46, 43, 69, 0.06);
         border-radius: 6px;
         font-style: normal;
@@ -163,6 +163,8 @@
         transition-property: border-color, background-color;
         transition-duration: 0.08s;
         transition-timing-function: ease-in;
+        resize: vertical;
+        min-height: 85px;
 
         &::placeholder {
           color: rgba(60, 60, 67, 0.6);
@@ -367,11 +369,6 @@
       padding-left: 12px;
       padding-right: 12px;
       order: 4;
-
-      .carousel-container {
-        padding-left: 12px;
-        padding-right: 12px;
-      }
     }
 
     > h2 {
@@ -382,6 +379,40 @@
       letter-spacing: 0.75px;
       color: var(--brand-primary);
       margin-bottom: 12px;
+    }
+
+    .carousel {
+      @media only screen and (min-width: $tablet-min) and (max-width: $desktop-max) {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: 12px;
+        margin-right: 12px;
+        width: calc(100% - 24px);
+        overflow: hidden;
+      }
+      // @media only screen and (max-width: $mobile-max) {
+      //   margin-left: 0;
+      //   margin-right: 0;
+      // }
+
+      .carousel-container {
+        @media only screen and (min-width: $tablet-min) and (max-width: $tablet-max) and (orientation: portrait) {
+          padding-left: 12px;
+          padding-right: 12px;
+          margin-left: -12px;
+          margin-right: -12px;
+        }
+      }
+
+      @media only screen and (min-width: $tablet-min) {
+        .carousel-nav-left {
+          margin-left: 0;
+        }
+
+        .carousel-nav-right {
+          margin-right: 0;
+        }
+      }
     }
   }
 
